# Zoltaran_Speaks

./: .gitignore  CLAUDE.md  README.md  credits.php  index.html  log.txt  package-lock.json  package.json  psychic_queue.php
__tests__/: CommitRevealClient.test.js  ConstellationIPFS.test.js  MemoGenerator.test.js  NFTMinter.test.js  RoboticVoice.test.js  SpookyAudioEngine.test.js  ZoltaranContract.test.js  setup.js  utilities.test.js
contracts/: CMakeLists.txt  build.sh  zoltaranwish.cpp
docs/plans/: 2026-01-22-nft-wish-cards-design.md
private/: index.php
src/: classes.js
